data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4609.wast
;; 8. **Test Description**:    - Execute `call_indirect` in a switch-case control structure where one case provides an insufficient number of operands compared to the function signature, checking for accurate operand stack management leading to a trap.    - **Constraint Being Checked**:      - Accurate operand stack processing and validation against the function's required parameter structure.    - **Relation to Control Flow Instructions**:      - The test validates the correctness of stack operations within complex multi-path control flows.

(assert_invalid
  (module
    (type $sig (func (param i32 i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param i32 i32) (result i32)
      (i32.add (local.get 0) (local.get 1))
    )
    (func
      (i32.const 0)
      (i32.const 1)
      (br 0)
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)